0.3.5
    o add faunabeheerzones as choice for multiple graphs #473
    o fixed gender colors #474
0.3.4
    o improve kencijfers table: #445
0.3.3
    o improve speed of the app: #452
0.3.2
    o various bug fixes: #426, #439
0.3.1
    o various bug fixes: #432, #436
0.3.0
    o move data from inst/extdata to S3 buckets
    o spatial WBE data in single file per WBE
0.2.9
    o fix #407
    o upgrade to INBOtheme 0.6.0
0.2.8
    o update mei 2022
0.2.7
    o split application in private (wbe) and public (grofwild and wildschade) part
0.2.6
    o november 2021 update
0.2.5
    o expand year slide for Ree (grofwild) in plot 2
0.2.4
    o include plot grofwild embryos, countEmbryos()
	o include new species and types of damage 
	o include missing province information data in countYearProvince plot and tableProvince
	o include bron-filter for boxAgeWeight plot + input-dependent age categories
	o percentage yearly shot animals grofwild: 
		include open-ended ribbons
	o fix tabs at top of page, include logo  	
0.2.3
	o percentage yearly shot animals grofwild: 
		include dutch month names;
		when afschotdatum = enddatum openingstijden, put in correct halfmonth 
	o add 'jaar' as variable for landkaart 2 wildschade
0.2.2
	o fix location points on landkaart 2 wildschade
0.2.1
	o fix legends for one level factors in wildschade plots 1 & 2
0.2.0
	o data update grofwild / wildschade 
	o update bio-indicator plot onderkaaklengte
	o include aesthetic "en" in titles
	o update graph grofwild - percentage jaarlijks afschot
0.1.24
	o teksten grofwild adjusted
	o teksten wildschade adjusted
	o titles graphs adjusted
0.1.23
	o set ymax to min 5 for absolute numbers in regio-schaal plot
0.1.22
	o format ticks to integer in regio-schaal plot
0.1.21
	o update openingstijden_grofwild.csv
	o default show map for landkaart 2 - wildschade
	o include type in filename for data export - grofwild
	o landkaart 1  sliders start at 2018 - wildschade