@@ -117,8 +117,10 @@ tagList(
       
       conditionalPanel("input.wbe_species == 'Wild zwijn' || input.wbe_species == 'Ree'",
         conditionalPanel("input.wbe_species == 'Ree'",
-          plotBioindicatorUI("wbe_onderkaak", bioindicator = "onderkaaklengte", regionLevels = NULL, uiText = uiText),
-          plotBioindicatorUI("wbe_gewicht", bioindicator = "ontweid_gewicht", regionLevels = NULL, uiText = uiText)
+          plotBioindicatorUI("wbe_onderkaak", bioindicator = "onderkaaklengte", 
+            regionLevels = NULL, showAccuracy = TRUE, uiText = uiText),
+          plotBioindicatorUI("wbe_gewicht", bioindicator = "ontweid_gewicht", 
+            regionLevels = NULL, uiText = uiText)
         )
       ),
       countEmbryosUI("wbe", regionLevels = NULL)
