@@ -1,4 +1,5 @@
 0.3.5
+    o add onderkaaklengte gauge bioindicator #332
     o add faunabeheerzones as choice for multiple graphs #473
     o fixed gender colors #474
 0.3.4
